--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,10 @@ services:
     depends_on: 
       - go
     volumes:
-      - .:/myubuntu
+      - ..:/myubuntu
+
   go:
     container_name: go
-    environment: 
-      - GO111MODULE=on
     build:
       context: .
       dockerfile: go.dockerfile
@@ -23,3 +22,14 @@ services:
     tty: true
     volumes:
       - ./go:/go/app
+        
+  py:
+    container_name: py
+    build:
+      context: .
+      dockerfile: py.dockerfile
+    ports:
+      - 8082:8082
+    tty: true
+    volumes:
+      - ./python:/app
