--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,29 +7,27 @@ services:
       context: .
       dockerfile: vim.dockerfile
     tty: true
-    depends_on:
-      - go
     volumes:
       - ..:/myubuntu
 
-  go:
-    container_name: go
-    build:
-      context: .
-      dockerfile: go.dockerfile
-    ports:
-      - 8081:8081
-    tty: true
-    volumes:
-      - ./go:/go/src/github.com/hodanov
-
-  py:
-    container_name: py
-    build:
-      context: .
-      dockerfile: py.dockerfile
-    ports:
-      - 8082:8082
-    tty: true
-    volumes:
-      - ./python:/app
+        #  go:
+        #    container_name: go
+        #    build:
+        #      context: .
+        #      dockerfile: go.dockerfile
+        #    ports:
+        #      - 8081:8081
+        #    tty: true
+        #    volumes:
+        #      - ./go:/go/src/github.com/hodanov
+        #
+        #  py:
+        #    container_name: py
+        #    build:
+        #      context: .
+        #      dockerfile: py.dockerfile
+        #    ports:
+        #      - 8082:8082
+        #    tty: true
+        #    volumes:
+        #      - ./python:/app
