--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: .
       dockerfile: vim.dockerfile
     tty: true
+    restart: always
     volumes:
       - ..:/myubuntu
 
