--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,27 +8,4 @@ services:
       dockerfile: vim.dockerfile
     tty: true
     volumes:
-      - ..:/myubuntu
-      - ../docker-template-go/code/app:/root/go/src/app
-
-        #  go:
-        #    container_name: go
-        #    build:
-        #      context: .
-        #      dockerfile: go.dockerfile
-        #    ports:
-        #      - 8081:8081
-        #    tty: true
-        #    volumes:
-        #      - ./go:/go/src/github.com/hodanov
-        #
-        #  py:
-        #    container_name: py
-        #    build:
-        #      context: .
-        #      dockerfile: py.dockerfile
-        #    ports:
-        #      - 8082:8082
-        #    tty: true
-        #    volumes:
-        #      - ./python:/app
+      - ..:/my-ubuntu
