--- a/config/dein.toml
+++ b/config/dein.toml
@@ -72,3 +72,9 @@ merged = '0'
 
 [[plugins]]
 repo = 'mattn/vim-goimports'
+
+###################
+# Debugger
+###################
+[[plugins]]
+repo = 'sebdah/vim-delve'
