--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,18 @@
 version: '3'
 
 services:
-  vim:
-    container_name: vim-dev
+  nvim:
+    container_name: nvim-dev
     build:
       context: .
-      dockerfile: vim.dockerfile
+      dockerfile: nvim.dockerfile
     tty: true
     restart: always
     networks:
-      - my-vim
+      - my-nvim
     volumes:
       - ..:/myubuntu
-        # - ../MyVM/MyDocker/docker-template-go/code:/root/go/src
-        # - ../MyVM/MyDocker/ci-cd-test/code:/root/go/src/ci-cd-test
-        # - ../MyVM/MyDocker/snippetbox/code:/root/go/src/github.com/hodanov
 networks:
-  my-vim:
+  my-nvim:
     driver: bridge
     external: true
