--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -1,6 +1,9 @@
 name: Docker image CI
 
-on: [push]
+on:
+  push:
+    paths:
+      - nvim.dockerfile
 
 jobs:
   build:
@@ -9,5 +12,4 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build the Docker image
         run: |
-          cd setup_files
           docker compose up -d
