--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -16,4 +16,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build the Docker image
         run: |
+          docker network create my-nvim
           docker compose up -d
