--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -11,7 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Set up QEMU
+      - uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/arm64
       - name: Build the Docker image
         run: |
           docker network create my-nvim
