--- a/.github/workflows/docker_image_ci.yml
+++ b/.github/workflows/docker_image_ci.yml
@@ -1,20 +1,19 @@
-name: Docker image CI
-
-on:
-  push:
-    paths:
-      - nvim.dockerfile
-      - .github/workflows/docker_image_ci.yml
-      - config/dependencies/requirements.txt
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: docker/setup-qemu-action@v2
-        with:
-          platforms: linux/arm64
-      - name: Build the Docker image
-        run: |
-          docker network create my-nvim
-          docker compose up -d
+# TODO: https://github.com/actions/runner-images/issues/5631
+# name: Docker image CI
+#
+# on:
+#   push:
+#     paths:
+#       - nvim.dockerfile
+#       - .github/workflows/docker_image_ci.yml
+#       - config/dependencies/requirements.txt
+#
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - name: Build the Docker image
+#         run: |
+#           docker network create my-nvim
+#           docker compose up -d
