--- a/config/dependencies/requirements.txt
+++ b/config/dependencies/requirements.txt
@@ -1,7 +1,5 @@
-mypy==1.11.1
+pyright==1.1.375
 ruff==0.5.7
-python-lsp-server==1.11.0
-pylsp-mypy==0.6.8
 pytest==8.3.2
 pytest-mock==3.14.0
 vim-vint==0.3.21
