--- a/.github/workflows/bump-tool-versions.yml
+++ b/.github/workflows/bump-tool-versions.yml
@@ -25,12 +25,7 @@ jobs:
         run: |
           set -euo pipefail
           # Node LTS latest
-          NODE_VERSION=$(curl -s https://nodejs.org/dist/index.json \
-            | jq -r '[.[] \
-            | select(.lts != false)] \
-            | max_by(.version | ltrimstr("v") | split(".") | map(tonumber)) \
-            | .version \
-            | ltrimstr("v")')
+          NODE_VERSION=$(curl -s https://nodejs.org/dist/index.json | jq -r '[.[] | select(.lts != false)] | max_by(.version | ltrimstr("v") | split(".") | map(tonumber)) | .version | ltrimstr("v")')
 
           ## Go latest stable
           #GO_VERSION=$(curl -s https://go.dev/dl/?mode=json \
