--- a/.github/workflows/bump-tool-versions.yml
+++ b/.github/workflows/bump-tool-versions.yml
@@ -28,21 +28,16 @@ jobs:
           NODE_VERSION=$(curl -s https://nodejs.org/dist/index.json | jq -r '[.[] | select(.lts != false)] | max_by(.version | ltrimstr("v") | split(".") | map(tonumber)) | .version | ltrimstr("v")')
 
           ## Go latest stable
-          GO_VERSION=$(curl -s https://go.dev/dl/?mode=json \
-            | jq -r '[.[] | select(.stable==true)][0].version' \
-            | ltrimstr("go")')
+          GO_VERSION=$(curl -s https://go.dev/dl/?mode=json | jq -r '[.[] | select(.stable==true)][0].version' | ltrimstr("go")')
 
           # Neovim latest release version
-          NEOVIM_VERSION=$(curl -s https://api.github.com/repos/neovim/neovim/releases/latest \
-            | jq -r '.tag_name' \
-            | ltrimstr("v")')
+          NEOVIM_VERSION=$(curl -s https://api.github.com/repos/neovim/neovim/releases/latest | jq -r '.tag_name' | ltrimstr("v")')
 
           # Rust toolchain (keep stable)
           RUST_TOOLCHAIN="stable"
 
           # npm cli latest
-          NPM_VERSION=$(curl -s https://registry.npmjs.org/npm/latest \
-            | jq -r '.version')
+          NPM_VERSION=$(curl -s https://registry.npmjs.org/npm/latest | jq -r '.version')
 
           echo "node=$NODE_VERSION" >> $GITHUB_OUTPUT
           echo "go=$GO_VERSION" >> $GITHUB_OUTPUT
