--- a/config/npm-tools/package.json
+++ b/config/npm-tools/package.json
@@ -10,6 +10,7 @@
     "@fsouza/prettierd": "^0.26.1",
     "bash-language-server": "^5.6.0",
     "eslint": "^9.33.0",
+    "markdownlint-cli2": "^0.18.1",
     "prettier-plugin-go-template": "^0.0.15",
     "textlint": "^15.2.1",
     "textlint-rule-preset-ja-technical-writing": "^12.0.2",
