Repair to make 'compose' persistent.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       context: .
       dockerfile: nvim.dockerfile
     tty: true
+    stdin_open: true
+    command: ["sleep", "infinity"]
     restart: always
     networks:
       - my-nvim
