--- a/.github/workflows/pr-docker-build.yml
+++ b/.github/workflows/pr-docker-build.yml
@@ -4,11 +4,11 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
-      - 'nvim.dockerfile'
-      - 'config/dependencies/**'
-      - 'config/npm-tools/**'
-      - '.github/workflows/bump-tool-versions.yml'
-      - '.github/dependabot.yml'
+      - "nvim.dockerfile"
+      - "config/dependencies/**"
+      - "config/npm-tools/**"
+      - ".github/workflows/bump-tool-versions.yml"
+      - ".github/dependabot.yml"
 
 concurrency:
   group: pr-docker-build-${{ github.event.pull_request.number }}
@@ -24,10 +24,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 120
     env:
-      DOCKER_BUILDKIT: '1'
+      DOCKER_BUILDKIT: "1"
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
