Disable Go cache for update-go-tools
## 変更内容
- `actions/setup-go` の `cache` を `false` に変更

## 変更理由
- リポジトリに `go.sum` が無く、キャッシュ復元が毎回 warning になるため

## 技術的な詳細
- `Setup Go` ステップのキャッシュ機能を無効化

## 注意事項
- ジョブ実行時間が少し伸びる可能性あり

--- a/.github/workflows/update-go-tools.yml
+++ b/.github/workflows/update-go-tools.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version: "1.25"
-          cache: true
+          cache: false
 
       - name: Update Go tools
         run: |
