Update treesitter config and container tooling
## 変更内容
- nvim-treesitterの設定を新APIに合わせて再構成し、対象言語を明示インストール
- nvim-treesitterを遅延無効化し、TSUpdateをビルド時に実行
- Docker構成でworkspaceのマウント方式を変更
- Dockerfileにclang/libclang-devとtree-sitter-cliを追加

## 変更理由
- treesitterの初期化/インストールを明確化して安定させるため
- 開発環境で必要なツールと依存をコンテナに揃えるため

## 技術的な詳細
- `nvim_treesitter.lua`で`ts.setup()`と`ts.install()`を分離し、`FileType`で`vim.treesitter.start()`を実行
- `plugins.lua`で`lazy=false`と`build=:TSUpdate`を設定
- `docker-compose.yml`で`${HOME}/workspace`を同一パスにマウント
- `nvim.dockerfile`でclang系依存を追加し、`tree-sitter`バイナリをコピー

## 注意事項
- コンテナ内のworkspaceパスがホスト依存になるため、HOMEが異なる環境では要確認

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     networks:
       - my-nvim
     volumes:
-      - ..:/workspace
+      # - ..:/workspace
+      - ${HOME}/workspace:/${HOME}/workspace
 networks:
   my-nvim:
     driver: bridge
