chore: reorganize env and nvim layout
## 変更内容
- Docker/ツール/Neovimの構成をenvironmentとnvim配下へ移動
- Dockerfile/composeとCI/Dependabotの参照パスを更新
- READMEの手順と参照パスを更新

## 変更理由
- 役割ごとのディレクトリ分離で保守性を上げるため

## 技術的な詳細
- nvim設定はnvim/configへ移動しDockerfileのCOPYを更新
- ツール依存はenvironment/tools配下へ移動しCI監視先を更新
- .dockerignoreで新パスをビルドコンテキストに追加

## 注意事項
- `docker compose -f environment/docker/docker-compose.yml` を使用
- 未追跡のAGENTS.mdとmemo.mdはこのコミットに含めていない

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,11 +2,15 @@
 **
 
 # Include only what the Docker build needs
-!nvim.dockerfile
-!docker-compose.yml
-!config/**
-!config/.bash_profile
-!config/dependencies/pyproject.toml
+!environment/
+!environment/docker/
+!environment/docker/nvim.dockerfile
+!environment/docker/docker-compose.yml
+!environment/tools/
+!environment/tools/**
+!nvim/
+!nvim/config/
+!nvim/config/**
 
 # Node/npm caches
 node_modules
