--- a/.github/workflows/pr-docker-build.yml
+++ b/.github/workflows/pr-docker-build.yml
@@ -6,9 +6,10 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
-      - "nvim.dockerfile"
-      - "config/dependencies/**"
-      - "config/npm-tools/**"
+      - "environment/docker/nvim.dockerfile"
+      - "environment/tools/python/**"
+      - "environment/tools/node/**"
+      - "environment/tools/go/**"
       - ".github/workflows/bump-tool-versions.yml"
       - ".github/dependabot.yml"
 
@@ -18,7 +19,7 @@ concurrency:
 
 jobs:
   build:
-    name: Docker build (nvim.dockerfile)
+    name: Docker build (environment/docker/nvim.dockerfile)
     if: |
       contains(toJson(github.event.pull_request.labels), 'dependencies') ||
       github.actor == 'dependabot[bot]' ||
@@ -37,6 +38,6 @@ jobs:
       - name: Build image
         run: |
           docker build \
-            --file nvim.dockerfile \
+            --file environment/docker/nvim.dockerfile \
             --progress=plain \
             .
