--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
         patterns:
           - "*"
   - package-ecosystem: "npm"
-    directory: "/environment/tools/node"
+    directory: "./environment/tools/node"
     schedule:
       interval: "weekly"
     groups:
@@ -17,7 +17,7 @@ updates:
         patterns:
           - "*"
   - package-ecosystem: "docker"
-    directory: "./"
+    directory: "./environment/docker"
     schedule:
       interval: "weekly"
     groups:
