Run Node linters in one job
## 変更内容
- tombi/prettier/markdownlintを1ジョブ内のステップ実行に変更

## 変更理由
- npm installを1回にまとめて実行時間と構成の単純化を図るため

## 技術的な詳細
- lint_node_tools.ymlのjobsを単一ジョブに整理
- 共通セットアップ後に各Lintを順次実行

## 注意事項
- 並列実行ではないため合計時間は長めになる可能性あり

--- a/.github/workflows/lint_node_tools.yml
+++ b/.github/workflows/lint_node_tools.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  lint-tombi:
+  lint-node-tools:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
@@ -24,36 +24,10 @@ jobs:
           export PATH="$PWD/environment/tools/node/node_modules/.bin:$PATH"
           tombi lint
 
-  lint-prettier:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install Node tools
-        run: npm --prefix environment/tools/node install
-
       - name: Run Prettier check
         run: |
           export PATH="$PWD/environment/tools/node/node_modules/.bin:$PATH"
           prettier --check .
-
-  lint-markdown:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install Node tools
-        run: npm --prefix environment/tools/node install
 
       - name: Run markdownlint-cli2
         shell: bash
