Repair a lint error about environment/tools/python/pyproject.toml.

--- a/environment/tools/python/pyproject.toml
+++ b/environment/tools/python/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 name = "my_dotfiles"
 version = "0.0.1"
+requires-python = ">=3.12.3"
 dependencies = [
   "debugpy==1.8.20",
   "pyright==1.1.408",
@@ -8,7 +9,6 @@ dependencies = [
   "pytest-mock==3.15.1",
   "ruff==0.14.14",
 ]
-required-python = ">=3.12.3"
 
 [tool.uv]
 package = false
